# Yoink.gg

./: .env.example  README.md  index.html  package-lock.json  package.json  svgo.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml
solana/: Anchor.toml  README.md  package.json  tsconfig.json
solana/migrations/: deploy.ts
solana/programs/kings-bag/: Cargo.toml
solana/programs/kings-bag/src/: lib.rs
solana/programs/wallet-wars/: Cargo.toml
solana/programs/wallet-wars/src/: lib.rs
solana/tests/: kings-bag.ts
src/: App.tsx  index.css  main.tsx
src/hooks/: useFreeRound.ts  useFreeSiege.test.ts  useGameState.ts  usePlayerProgress.ts  useReferral.ts  useRoomInstances.ts
src/lib/: bagMath.test.ts  bagMath.ts  bidWarsState.ts  constants.ts  featureFlags.ts  jackpot.ts  payouts.ts  progression.ts  puterAI.ts  referral.test.ts  referral.ts  reignToll.test.ts  reignToll.ts  rooms.ts  seasonLeaderboard.ts  shopItems.ts  siegeFairness.test.ts  siegeMath.test.ts  siegeMath.ts  siegeVerify.ts  solana.ts  sounds.ts  supabaseClient.ts  supabaseWar.ts  telegram.ts  types.ts  utils.ts  variableRiskVaults.test.ts  variableRiskVaultsEngine.test.ts  vrf.ts  wallet-solana.tsx  wallet.tsx  walletWarsActivity.test.ts  walletWarsActivity.ts  walletWarsChain.ts  walletWarsMigration.test.ts  walletWarsRole.test.ts  walletWarsRole.ts  walletWarsSiegeFeel.test.ts  walletWarsStability.test.ts  (+3 more)
supabase/: .gitignore  config.toml  seed.sql
supabase/migrations/: 00001_initial_schema.sql  0001_init.sql  (+1 more)
(+92 files in other folders)
