[package]
name = "kings-bag"
version = "0.1.0"
description = "YOINK.GG — The King's Bag on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kings_bag"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
