[package]
name = "wallet-wars"
version = "0.1.0"
description = "YOINK.GG — Wallet Wars escrow + Switchboard VRF (devnet, NOT audited)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wallet_wars"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
# Switchboard On-Demand randomness. NOTE: pin to the version your devnet
# Switchboard queue expects and re-verify the RandomnessAccountData API at
# deploy time — the SDK surface changes between releases.
switchboard-on-demand = "0.6.0"
